--- a/Lancer/Views/Home/Offer.cshtml
+++ b/Lancer/Views/Home/Offer.cshtml
@@ -32,9 +32,9 @@
                         </label>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Bid" class="control-label"></label>
-                        <input asp-for="Bid" class="form-control" />
-                        <span asp-validation-for="Bid" class="text-danger"></span>
+                        <label asp-for="Bids" class="control-label"></label>
+                        <input asp-for="Bids" class="form-control" />
+                        <span asp-validation-for="Bids" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Business" class="control-label"></label>
@@ -42,14 +42,14 @@
                         <span asp-validation-for="Business" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Contact" class="control-label"></label>
-                        <input asp-for="Contact" class="form-control" />
-                        <span asp-validation-for="Contact" class="text-danger"></span>
+                        <label asp-for="Lead" class="control-label"></label>
+                        <input asp-for="Lead" class="form-control" />
+                        <span asp-validation-for="Lead" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="FreeLancer" class="control-label"></label>
-                        <input asp-for="FreeLancer" class="form-control" />
-                        <span asp-validation-for="FreeLancer" class="text-danger"></span>
+                        <label asp-for="FreeLancers" class="control-label"></label>
+                        <input asp-for="FreeLancers" class="form-control" />
+                        <span asp-validation-for="FreeLancers" class="text-danger"></span>
                     </div>        
                     <div class="form-group">
                         <label asp-for="Project" class="control-label"></label>
