--- a/Lancer/Views/Home/Project.cshtml
+++ b/Lancer/Views/Home/Project.cshtml
@@ -52,9 +52,9 @@
                         <span asp-validation-for="Summary" class="text-danger"></span>
                     </div> 
                     <div class="form-group">
-                        <label asp-for="FreeLancer" class="control-label"></label>
-                        <input asp-for="FreeLancer" class="form-control" />
-                        <span asp-validation-for="FreeLancer" class="text-danger"></span>
+                        <label asp-for="FreeLancers" class="control-label"></label>
+                        <input asp-for="FreeLancers" class="form-control" />
+                        <span asp-validation-for="FreeLancers" class="text-danger"></span>
                     </div>  
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-primary" />
