--- a/Lancer/Views/Home/Login.cshtml
+++ b/Lancer/Views/Home/Login.cshtml
@@ -17,7 +17,7 @@
             </div>
 
         </div>
-        <form asp-action="View">
+        <form asp-action="Login" asp-controller="Home">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="EmailAddress" class="control-label"></label>
