--- a/Lancer/Views/Home/Offer.cshtml
+++ b/Lancer/Views/Home/Offer.cshtml
@@ -19,47 +19,47 @@
         </div>
 
 
-                <form asp-action="View">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="Id" class="control-label"></label>
-                        <input asp-for="Id" class="form-control" />
-                        <span asp-validation-for="Id" class="text-danger"></span>
-                    </div>
-                    <div class="form-group form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" asp-for="ShowRequestId" /> @Html.DisplayNameFor(model => model.ShowRequestId)
-                        </label>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Bids" class="control-label"></label>
-                        <input asp-for="Bids" class="form-control" />
-                        <span asp-validation-for="Bids" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Business" class="control-label"></label>
-                        <input asp-for="Business" class="form-control" />
-                        <span asp-validation-for="Business" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Lead" class="control-label"></label>
-                        <input asp-for="Lead" class="form-control" />
-                        <span asp-validation-for="Lead" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="FreeLancers" class="control-label"></label>
-                        <input asp-for="FreeLancers" class="form-control" />
-                        <span asp-validation-for="FreeLancers" class="text-danger"></span>
-                    </div>        
-                    <div class="form-group">
-                        <label asp-for="Project" class="control-label"></label>
-                        <input asp-for="Project" class="form-control" />
-                        <span asp-validation-for="Project" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
-                    </div>
-                </form>
+        <form asp-action="Offer" asp-controller="Home">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="ShowRequestId" /> @Html.DisplayNameFor(model => model.ShowRequestId)
+                </label>
+            </div>
+            <div class="form-group">
+                <label asp-for="Bids" class="control-label"></label>
+                <input asp-for="Bids" class="form-control" />
+                <span asp-validation-for="Bids" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Business" class="control-label"></label>
+                <input asp-for="Business" class="form-control" />
+                <span asp-validation-for="Business" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Lead" class="control-label"></label>
+                <input asp-for="Lead" class="form-control" />
+                <span asp-validation-for="Lead" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FreeLancers" class="control-label"></label>
+                <input asp-for="FreeLancers" class="form-control" />
+                <span asp-validation-for="FreeLancers" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Project" class="control-label"></label>
+                <input asp-for="Project" class="form-control" />
+                <span asp-validation-for="Project" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
 
         <div>
             <a asp-action="Index">Back to List</a>
@@ -68,4 +68,4 @@
         @section Scripts {
             @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
         }
-        </fieldset>
+    </fieldset>
